<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" >Drive Win</string>
    <string name="map_key">AIzaSyCdIPSoPiWgl_DhGaAsSHDwAhvbdFJDg_0</string>
    <string name="CIN">CIN</string>
    <string name="Nom">Last name</string>
    <string name="Prenom">First name</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="Register">Register</string>
    <string name="ChangeMapView">Change Map View</string>
    <string name="SpeedMoin">Speed -</string>
    <string name="SpeedPlus">Speed +</string>
    <string name="dateTimeS">start date and time</string>
    <string name="dateTimeE">End date and time</string>
    <string name="selectDate">Select Date</string>
    <string name="selectTime">Select Time</string>
    <string name="showTrip">Show Trip</string>
    <string name="LOGIN">Login</string>
    <string name="signUp">Sign up</string>
    <string name="evaluation">End of the trip</string>
    <string name="modeAuto">automatic mode</string>
    <string name="Bienvenue">Welcome </string>
    <string name="start">Start </string>
    <string name="update">Edit profile</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="last_trip_map">Last Trip </string>
    <string name="last_trip_evaluation">Last Trip Evaluation</string>
    <string name="historique">History</string>
    <string name="historique_trips">Historique Trips</string>
    <string name="historique_evaluations">Historique Evaluations</string>
    <string name="new_trip">new Trip</string>
    <string name="profil">Profile</string>
    <string name="parametre">setting</string>
    <string name="logout">Logout</string>
    <string name="compte_proffessionel">Professional</string>
    <string name="compte_normal">Normal</string>
    <string name="restart">Restart</string>
    <string name="data">Data</string>
    <string name="data_you_want_to_recover">data you want to recover :</string>
    <string name="help">Help</string>
    <string name="language">language</string>
    <string name="live">direct</string>
    <string name="back">Back</string>
    <string name="emptyTrip">empty Trip</string>
    <string name="noTrip">No trips available in this period</string>
    <string name="xcin">Invalid CIN</string>
    <string name="xmail">Invalid email address</string>
    <string name="please">please fill in all fields</string>
    <string name="select_permis">Select permis</string>
    <string name="cetagorie">categorie</string>
    <string name="attention">Attention</string>
    <string name="cnx">No internet connection</string>
    <string name="exist">account does not exist</string>
    <string name="already_mail">email already exists</string>
    <string name="false_pass">false password</string>
    <string name="trip">do you want to save this trip</string>
    <string name="prosvp">create a professional account please</string>
    <string name="accessibility_service_description">please activate the drive win service</string>
    <string name="swtch">Switch</string>
    <string name="controller">Controller</string>
    <string name="listeCar">List of cars </string>
    <string name="addCar">ADD Car</string>
    <string name="enterVin">Enter your VIN Number</string>
    <string name="Itinéraire">itinéraire</string>
    <string name="dateNais">Date of Birth</string>
    <string name="valider">validate</string>
    <string name="cancel">cancel</string>
    <string name="vininvalide">invalid vin</string>
    <string name="itinéraire">route</string>
    <string name="eval">evaluation</string>
    <string name="liveroute">live route</string>
    <string name="listoldtrip">Old trip list</string>
    <string name="nocar">No cars Available for this compte</string>
    <string name="warning">Warning</string>
    <string name="nocnx">No internet connection</string>
    <string name="permiscategorie">driving license category</string>
    <string name="cata">Category A</string>
    <string name="catb">Category B</string>
    <string name="catce">Category C+E</string>
    <string name="catd">Category D</string>
    <string name="sex">Sex</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="auth">Authorization</string>
    <string name="locsucc">login successful</string>
    <string name="server">server connection problem</string>
    <string name="langue">choose language</string>
    <string name="nolive">No Live trip Available for this car</string>
    <string name="notrip">No trip Available for this car</string>
    <string name="confirmation">confirmation</string>
    <string name="noshow">nothing to show</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="savetrip">do you want to record this trip</string>
    <string name="aboutus"> About </string>
    <string name="aboutname">Intelligent driving assessment app</string>
    <string name="descabout">Our application called drive and win is used for the intelligent evaluation of driving based on machine learning models</string>
    <string name="aboutweb">visit our website</string>
    <string name="aboutcontact">contact us</string>
    <string name="modeDark">dark mode</string>
    <string name="details">details</string>
    <string name="distancetraveled">distance traveled</string>
    <string name="tripduration">trip duration</string>
    <string name="consomationfuel">fuel consumption</string>
    <string name="name">Name</string>
    <string name="limit">speed limit</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="requested_data_could_not_be_loaded">Requested data could not be loaded</string>
    <string name="try_again">DE NOUVEAU</string>
    <string name="classic">Classic</string>
    <string name="en">English</string>
    <string name="fr">French</string>
    <string name="ar">Arabic</string>
    <string name="save">Save</string>
    <string name="histodate">select start and end date</string>
    <string name="areyousure">Are you sure?</string>
    <string name="deletecar">You want to delete this car?</string>




</resources>