<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">



    <item
        android:id="@+id/nav_histo"
        android:title="@string/historique"
        android:icon="@drawable/ic_baseline_access_time_24" />

    <item
        android:id="@+id/nav_last"
        android:title="@string/last_trip_map"
        android:icon="@drawable/ic_baseline_reply_24" />

    <item
        android:id="@+id/nav_new"
        android:title="@string/new_trip"
        android:icon="@drawable/ic_baseline_add_box_24"/>

    <item
        android:id="@+id/nav_live"
        android:title="@string/live"
        android:icon="@drawable/ic_baseline_location_on_24" />



    <item
        android:id="@+id/nav_cont"
        android:title="@string/controller"
        android:icon="@drawable/ic_baseline_video_settings_24" />

</menu>