<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <Button
        android:id="@+id/button_en"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="?attr/firstTxtColor"
        android:text="@string/en"
        android:background="@drawable/img"
        android:layout_marginTop="20sp"
        android:layout_marginLeft="20sp"
        android:layout_marginStart="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginEnd="20sp"
        />
    <Button
        android:id="@+id/button_fr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="?attr/firstTxtColor"
        android:text="@string/fr"
        android:background="@drawable/img"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="20sp"
        android:layout_marginStart="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginEnd="20sp"

        />
    <Button
        android:id="@+id/button_ar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="?attr/firstTxtColor"
        android:text="@string/ar"
        android:background="@drawable/img"
        android:layout_marginTop="140dp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginBottom="30sp"
        />

</FrameLayout>