<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/dashboardLayout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_dashboard"
        android:fontFamily="@font/googlesans_bold"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:layout_margin="20dp"/>
        <ProgressBar
            android:id="@+id/progDash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/SCBSwitch"
            android:layout_gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/txtPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="4"
        android:columnCount="2"
        android:layout_margin="5dp"
        android:alignmentMode="alignMargins"
        android:layout_gravity="center_horizontal"
        android:columnOrderPreserved="false"
        >


        <android.support.v7.widget.CardView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:id="@+id/lastMap"
            app:cardCornerRadius="12dp"
            app:cardElevation="5dp"
            app:cardBackgroundColor="?attr/firstBack"
            android:layout_margin="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_trip_map"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"/>
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="70dp"
                    android:src="@drawable/dashcar"
                    android:layout_marginBottom="20dp"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:id="@+id/histoMap"
            app:cardCornerRadius="12dp"
            app:cardElevation="5dp"
            app:cardBackgroundColor="?attr/firstBack"
            android:layout_margin="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/historique_trips"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"/>

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="70dp"
                    android:src="@drawable/dashtriphis"
                    android:layout_marginBottom="20dp"/>


            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:id="@+id/newtrip"
            app:cardCornerRadius="12dp"
            app:cardElevation="5dp"
            app:cardBackgroundColor="?attr/firstBack"
            android:layout_margin="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_trip"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:layout_marginBottom="20dp"/>
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="70dp"
                    android:src="@drawable/newtrip"
                    android:layout_marginBottom="20dp"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:id="@+id/profile"
            app:cardCornerRadius="12dp"
            app:cardElevation="5dp"
            app:cardBackgroundColor="?attr/firstBack"
            android:layout_margin="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profil"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:layout_marginBottom="20dp"/>

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="70dp"
                    android:src="@drawable/utilisateur"
                    android:layout_marginBottom="20dp"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:id="@+id/controller"
            app:cardCornerRadius="12dp"
            app:cardElevation="5dp"
            app:cardBackgroundColor="?attr/firstBack"
            android:layout_margin="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/controller"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:layout_marginBottom="20dp"/>

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="70dp"
                    android:src="@drawable/access"
                    android:layout_marginBottom="20dp"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:id="@+id/param"
            app:cardCornerRadius="12dp"
            app:cardElevation="5dp"
            app:cardBackgroundColor="?attr/firstBack"
            android:layout_margin="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parametre"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:layout_marginBottom="20dp"/>

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="70dp"
                    android:src="@drawable/dashparam"
                    android:layout_marginBottom="20dp"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:id="@+id/aboutus"
            app:cardCornerRadius="12dp"
            app:cardElevation="5dp"
            app:cardBackgroundColor="?attr/firstBack"
            android:layout_margin="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutus"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:layout_marginBottom="20dp"/>

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="70dp"
                    android:src="@drawable/about"
                    android:layout_marginBottom="20dp" />
            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:id="@+id/logout"
            app:cardCornerRadius="12dp"
            app:cardElevation="5dp"
            app:cardBackgroundColor="?attr/firstBack"
            android:layout_margin="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:layout_marginBottom="20dp"/>

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="70dp"
                    android:src="@drawable/logout"
                    android:layout_marginBottom="20dp" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </GridLayout>
    </LinearLayout>



</ScrollView>
