<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/layout_back"
    tools:context=".Parametres">

    <include layout="@layout/drivewinback" />

    <TextView
        android:id="@+id/data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginStart="20sp"
        android:text="@string/data_you_want_to_recover"
        android:textColor="?attr/firstTxtColor"
        android:drawableRight="@drawable/ic_baseline_keyboard_arrow_down_24"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp"
        android:layout_marginLeft="20sp" />

    <View
        android:id="@+id/ligne"
        android:layout_width="fill_parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="1dp"
        android:background="?attr/firstTxtColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/data"/>



    <TextView
        android:id="@+id/langue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="40dp"
        android:drawableRight="@drawable/ic_baseline_keyboard_arrow_down_24"
        android:text="@string/language"
        android:textColor="?attr/firstTxtColor"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/data" />

    <View
        android:id="@+id/ligne2"
        android:layout_width="fill_parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="1dp"
        android:background="?attr/firstTxtColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/langue"/>

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20sp"
        android:text="@string/modeDark"
        android:textColor="?attr/firstTxtColor"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/langue"
        android:layout_marginLeft="20sp" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20sp"
        android:layout_marginRight="20sp"
        android:checked="false"
        android:switchMinWidth="56dp"
        android:theme="@style/SCBSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/langue" />


</android.support.constraint.ConstraintLayout>